[tool.poetry]
name = "DL-boilerplate"
version = "0.1.0"
description = "Some boilerplate code for a Deep Learining project"
authors = ["Anwesh <anwesh.marwade@pon.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
#torch = [
#            {markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", url = "https://download.pytorch.org/whl/cpu/torch-1.8.0-cp38-none-macosx_10_9_x86_64.whl"},
#             {markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", url = "https://download.pytorch.org/whl/cpu/torch-1.9.0-cp38-none-macosx_11_0_arm64.whl"},
##            {markers = "sys_platform == 'linux'", url = "https://download.pytorch.org/whl/cu111/torch-1.8.0%2Bcu111-cp38-cp38-linux_x86_64.whl"},
#]
#torchvision = [
#                {markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", url = "https://download.pytorch.org/whl/torchvision-0.9.0-cp38-cp38-macosx_10_9_x86_64.whl"},
#                {markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", url = "https://download.pytorch.org/whl/cpu/torchvision-0.10.0-cp38-cp38-macosx_11_0_arm64.whl"},
##                {markers = "sys_platform == 'linux'", url = "https://download.pytorch.org/whl/cu111/torchvision-0.9.0%2Bcu111-cp38-cp38-linux_x86_64.whl"},
#]
#scikit-learn = "^1.3.0"
pydantic = "^2.0.3"
tqdm = "^4.65.0"
#albumentations = "^1.3.1"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
pandas = "^2.0.3"
loguru = "^0.7.0"
tensorboardx = "^2.6.1"
black = "^23.7.0"
seaborn = "^0.12.2"
grad-cam = "^1.4.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
